# my-code-samples

./: .gitignore
64/: add  add.cpp  add.s
64/detect/: detect.c
ProgrammingChallenges/110101-3n+1/: 3nPlus1  3nPlus1.cpp  3nPlus1.py  test.txt
ProgrammingChallenges/110106-Interpreter/: interpreter  interpreter.cpp  test.txt
ProjectEuler/: template.tex
algorithms/dynamic_programming/linear_partitioning/cpp/linear_partitioning/: CMakeLists.txt  linear_partitioning.h
algorithms/dynamic_programming/linear_partitioning/cpp/linear_partitioning/tests/: CMakeLists.txt
antlr/: ExpressionLexer.cpp  ExpressionLexer.hpp  ExpressionParser.cpp  ExpressionParser.hpp  ExpressionParserTokenTypes.hpp  ExpressionParserTokenTypes.txt  ExpressionTreeWalker.cpp  ExpressionTreeWalker.hpp  Main.cpp  Main.java  expression.g
arduino/: blinkingLeds.ino
asan/: use-after-free.c
asm/: cpuid  cpuid.cpp  div2VsShift1  div2VsShift1.c  intVsUint  intVsUint.c  mul.c  pointerArith  pointerArith.c
assertion/: assert  assert.c
bash/: pipe.sh
bitcounting/: amd.cpp
boost.python/: Jamfile
c/: dateMacro.c  getopt  getopt.c
calc/: libcalcTest1  libcalcTest1.c
clojure/: generate-completions.clj
cmake/linear_partitioning/tests/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  linear_partitioning_tests.cpp
codigos/: 3en1.py
compilador4o/: interprete.tar.bz2
cpp/: arrayRef.cpp  coutingLeadingZeros.cpp  main.cpp  zero_init.cpp
cpp11/: .ycm_extra_conf.py  basic  basic.cpp  set_compare  set_compare.cpp
cpucount/: cpucount  cpucount.cpp
d/: hello  hello.d
erlang/: ex1.erl  tut.beam  tut.erl  tut1.beam  tut1.erl  tut10.beam  tut10.erl  tut11.beam  tut11.erl  tut13.beam  tut13.erl  tut14.beam  tut14.erl  tut15.beam  tut15.erl  tut16.beam  tut16.erl  tut2.beam  tut2.erl  tut3.beam  tut3.erl  tut4.beam  tut4.erl  tut5.beam  tut5.erl  tut6.beam  tut6.erl  tut7.beam  tut7.erl  tut8.erl  tut9.beam  tut9.erl
go/: cat  cat.go  cat_rot13  cat_rot13.go  echo  echo.go  enums  enums.go  file.go  hello  hello-gcc  hello.go  multiplex  new  new.go  prime_sieve  prime_sieve.go  prime_sieve2  prime_sieve2.go  prime_sieve3  prime_sieve3.go  print  print.go  sum  sum.go  switch  switch.go  using_file  using_file.go
gtest/: main.cc
hadoop/: .classpath  .project
iptables/: nat.sh
ipython/: IPythonCookbook.ipynb
java/: ModifMap.java
javascript/: pow.js  test.html  tester.html  triangle.js  tutorial.js
ldconfig/: libshared.so.1  libshared.so.1.0.1  main  main.c  shared.c
linux/systemtap/heapsort-0.5/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  config.h  config.h.in  config.status  configure  configure.ac  debugfiles.list  debuglinks.list  debugsources.list  heap_tap_all.stp  heap_time_phases.stp  heapsort  heapsort.cxx  heapsort.spec  probes.d  probes.h  trace.h
linux/systemtap/heapsort-0.5/.deps/: heapsort.Po
linux/systemtap/heapsort-0.5/tapset/: Makefile  Makefile.am  Makefile.in  heapsort.stp
makefiles/: Makefile_cpp
mmx/: cachegrind.out.30729  cachegrind.out.30752  cachegrind.out.30791  massif.30088.ps  massif.30088.txt  paddd.cpp  pcmpeqd  pcmpeqd.cpp  pmuludq.cpp
mysql/: add_user.sql
node/: simpleserver.js
openmp/: conditionalPragmas  conditionalPragmas.cpp  for  for.cpp  num_procs.cpp  parallel  parallel.cpp  simplelock  simplelock.cpp  stupid  stupid.cpp  stupid64
pari/: gcd  gcd.cpp  matrices  matrices.cpp  pariTest1  pariTest1.cpp  polynomials  polynomials.cpp
postgresql/: adduser.txt
postscript/: spiral.ps
python/: fork.py  pow.py
repository/: FuncRep.h  Method.h  Method1.h  Method11.h  Method2.h  main.cpp
scheme/: distinct.scm  hello.scm  reduce.scm
sec/: ntp.sec.conf  reporter.py
sse/: checkforSSE  checkforSSE.cpp  vecXmat  vecXmat.cpp  vecXmat.s
sse3/: sse3  sse3.c  sse3_int  sse3_int.c
swig/: mymodule.i  mymodule.py  mymodule_wrap.cxx  some_class.cpp  some_class.h
time/: CvsSTL  CvsSTL.cpp  clock_gettime  clock_gettime.cpp  cpufreq.cpp
tornado/: base_rest.py  concurrent_threadpool.py  post.py
(+1635 files in other folders)
